--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ target="index.files/props007.xml">
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -345,7 +345,7 @@ target="index.files/props007.xml">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -353,7 +353,7 @@ target="index.files/props007.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -361,7 +361,7 @@ target="index.files/props007.xml">
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -376,14 +376,14 @@ target="index.files/props007.xml">
 	mso-font-pitch:variable;
 	mso-font-signature:-469750017 -1073732485 9 0 511 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:"\@ºÚÌå";
+	{font-family:"\@é»‘ä½“";
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
@@ -404,7 +404,7 @@ target="index.files/props007.xml">
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -427,28 +427,28 @@ a:visited, span.MsoHyperlinkFollowed
 p.MsoPlainText, li.MsoPlainText, div.MsoPlainText
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"´¿ÎÄ±¾ Char";
+	mso-style-link:"çº¯æ–‡æœ¬ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
 	text-justify:inter-ideograph;
 	mso-pagination:none;
 	font-size:10.5pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-hansi-font-family:"Courier New";
 	mso-bidi-font-family:"Courier New";
 	mso-font-kerning:1.0pt;}
 span.Char
-	{mso-style-name:"´¿ÎÄ±¾ Char";
+	{mso-style-name:"çº¯æ–‡æœ¬ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:´¿ÎÄ±¾;
+	mso-style-link:çº¯æ–‡æœ¬;
 	mso-bidi-font-size:10.5pt;
-	font-family:ËÎÌå;
-	mso-ascii-font-family:ËÎÌå;
-	mso-fareast-font-family:ËÎÌå;
+	font-family:å®‹ä½“;
+	mso-ascii-font-family:å®‹ä½“;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-hansi-font-family:"Courier New";
 	mso-bidi-font-family:"Courier New";}
 .MsoChpDefault
@@ -481,7 +481,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -510,96 +510,96 @@ punctuation'>
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoPlainText><b style='mso-bidi-font-weight:normal'><span lang=EN-US
-style='font-size:24.0pt;font-family:ºÚÌå;mso-bidi-font-family:ËÎÌå'>KVZM Studios<o:p></o:p></span></b></p>
+style='font-size:24.0pt;font-family:é»‘ä½“;mso-bidi-font-family:å®‹ä½“'>KVZM Studios<o:p></o:p></span></b></p>
 
 <p class=MsoPlainText><span lang=EN-US style='font-size:18.0pt;font-family:
-ºÚÌå;mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+é»‘ä½“;mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoPlainText><span style='font-size:11.0pt;mso-bidi-font-size:18.0pt;
-font-family:ºÚÌå;mso-bidi-font-family:ËÎÌå'>²úÆ·<span lang=EN-US><o:p></o:p></span></span></p>
+font-family:é»‘ä½“;mso-bidi-font-family:å®‹ä½“'>äº§å“<span lang=zh-CN><o:p></o:p></span></span></p>
 
 <p class=MsoPlainText><span lang=EN-US style='font-size:18.0pt;font-family:
-ºÚÌå;mso-bidi-font-family:ËÎÌå'>Jigsaw UI<o:p></o:p></span></p>
+é»‘ä½“;mso-bidi-font-family:å®‹ä½“'>Jigsaw UI<o:p></o:p></span></p>
 
-<p class=MsoNormal><span lang=EN-US style='font-family:ËÎÌå;mso-ascii-theme-font:
+<p class=MsoNormal><span lang=EN-US style='font-family:å®‹ä½“;mso-ascii-theme-font:
 major-fareast;mso-fareast-theme-font:major-fareast;mso-hansi-theme-font:major-fareast'><a
 href="https://www.bilibili.com/video/BV1Ko4y1S7QZ"><span lang=EN-US><span
-lang=EN-US>ÁË½âÊ²Ã´ÊÇJigsaw UI &gt;</span></span></a> <o:p></o:p></span></p>
+lang=EN-US>äº†è§£ä»€ä¹ˆæ˜¯Jigsaw UI &gt;</span></span></a> <o:p></o:p></span></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
 <p class=MsoNormal><span lang=EN-US><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoNormal><span lang=EN-US style='font-family:ËÎÌå;mso-ascii-theme-font:
+<p class=MsoNormal><span lang=EN-US style='font-family:å®‹ä½“;mso-ascii-theme-font:
 major-fareast;mso-fareast-theme-font:major-fareast;mso-hansi-theme-font:major-fareast'><a
 href="https://kvzmstudios.lanzoui.com/inlzwrvkeli"><span lang=EN-US><span
-lang=EN-US>ÔÚWindows</span></span><span lang=EN-US><span lang=EN-US>Æ½Ì¨ÉÏÌåÑéJigsaw
+lang=EN-US>åœ¨Windows</span></span><span lang=EN-US><span lang=EN-US>å¹³å°ä¸Šä½“éªŒJigsaw
 UI &gt;</span></span></a><o:p></o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-ascii-font-family:ËÎÌå;
-mso-ascii-theme-font:major-fareast;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
-major-fareast;mso-hansi-font-family:ËÎÌå;mso-hansi-theme-font:major-fareast;
-mso-bidi-font-family:ËÎÌå'><a href="https://kvzmstudios.lanzoui.com/b01tzkrad"><span
-lang=EN-US><span lang=EN-US>ÌåÑéJigsaw UI</span></span><span lang=EN-US><span
-lang=EN-US>Ó¦ÓÃ³ÌĞò &gt;</span></span></a><o:p></o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-ascii-font-family:å®‹ä½“;
+mso-ascii-theme-font:major-fareast;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
+major-fareast;mso-hansi-font-family:å®‹ä½“;mso-hansi-theme-font:major-fareast;
+mso-bidi-font-family:å®‹ä½“'><a href="https://kvzmstudios.lanzoui.com/b01tzkrad"><span
+lang=EN-US><span lang=EN-US>ä½“éªŒJigsaw UI</span></span><span lang=EN-US><span
+lang=EN-US>åº”ç”¨ç¨‹åº &gt;</span></span></a><o:p></o:p></span></p>
 
-<p class=MsoPlainText><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>£¨ÃÜÂë<span lang=EN-US>e2ti</span>£©<span lang=EN-US><o:p></o:p></span></span></p>
+<p class=MsoPlainText><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>ï¼ˆå¯†ç <span lang=EN-US>e2ti</span>ï¼‰<span lang=EN-US><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-ascii-font-family:ËÎÌå;
-mso-ascii-theme-font:major-fareast;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:
-major-fareast;mso-hansi-font-family:ËÎÌå;mso-hansi-theme-font:major-fareast;
-mso-bidi-font-family:ËÎÌå'><a href="https://kvzmstudios.lanzoui.com/b01ufkpli"><span
-lang=EN-US><span lang=EN-US>¿ª·¢ÕßÎÄµµ¡¢¹¤¾ß¡¢Ä£¿é¼°Ä£°å &gt;</span></span></a></span><span
-class=MsoHyperlink><span lang=EN-US style='mso-ascii-font-family:ËÎÌå;mso-ascii-theme-font:
-major-fareast;mso-fareast-font-family:ËÎÌå;mso-fareast-theme-font:major-fareast;
-mso-hansi-font-family:ËÎÌå;mso-hansi-theme-font:major-fareast'><o:p></o:p></span></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-ascii-font-family:å®‹ä½“;
+mso-ascii-theme-font:major-fareast;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:
+major-fareast;mso-hansi-font-family:å®‹ä½“;mso-hansi-theme-font:major-fareast;
+mso-bidi-font-family:å®‹ä½“'><a href="https://kvzmstudios.lanzoui.com/b01ufkpli"><span
+lang=EN-US><span lang=EN-US>å¼€å‘è€…æ–‡æ¡£ã€å·¥å…·ã€æ¨¡å—åŠæ¨¡æ¿ &gt;</span></span></a></span><span
+class=MsoHyperlink><span lang=EN-US style='mso-ascii-font-family:å®‹ä½“;mso-ascii-theme-font:
+major-fareast;mso-fareast-font-family:å®‹ä½“;mso-fareast-theme-font:major-fareast;
+mso-hansi-font-family:å®‹ä½“;mso-hansi-theme-font:major-fareast'><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>(</span><span style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>ÃÜÂë<span lang=EN-US>5opv)</span></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>(</span><span style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>å¯†ç <span lang=EN-US>5opv)</span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>ÁªÏµ·½Ê½£º<span lang=EN-US><a href="mailto:kvzmstudios@outlook.com">E-mail</a><o:p></o:p></span></span></p>
+<p class=MsoPlainText><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>è”ç³»æ–¹å¼ï¼š<span lang=EN-US><a href="mailto:kvzmstudios@outlook.com">E-mail</a><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>(C)KVZM Studios 2021 <o:p></o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>(C)KVZM Studios 2021 <o:p></o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>Created by <a href="https://pigeon-ming.github.io/">Pigeon_Ming</a>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Created by <a href="https://pigeon-ming.github.io/">Pigeon_Ming</a>
 on Word<o:p></o:p></span></p>
 
 </div>
