--- a/JigsawApps.html
+++ b/JigsawApps.html
@@ -39,7 +39,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
   <w:TrackMoves>false</w:TrackMoves>
   <w:TrackFormatting/>
   <w:PunctuationKerning/>
-  <w:DrawingGridVerticalSpacing>7.8 °õ</w:DrawingGridVerticalSpacing>
+  <w:DrawingGridVerticalSpacing>7.8 ç£…</w:DrawingGridVerticalSpacing>
   <w:DisplayHorizontalDrawingGridEvery>0</w:DisplayHorizontalDrawingGridEvery>
   <w:DisplayVerticalDrawingGridEvery>2</w:DisplayVerticalDrawingGridEvery>
   <w:ValidateAgainstSchemas/>
@@ -343,7 +343,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -351,7 +351,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -359,7 +359,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -374,14 +374,14 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:-469750017 -1073732485 9 0 511 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:"\@ºÚÌå";
+	{font-family:"\@é»‘ä½“";
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
@@ -402,7 +402,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -412,7 +412,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 p.MsoHeader, li.MsoHeader, div.MsoHeader
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"Ò³Ã¼ Char";
+	mso-style-link:"é¡µçœ‰ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:center;
@@ -427,7 +427,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -437,7 +437,7 @@ p.MsoHeader, li.MsoHeader, div.MsoHeader
 p.MsoFooter, li.MsoFooter, div.MsoFooter
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"Ò³½Å Char";
+	mso-style-link:"é¡µè„š Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	mso-pagination:none;
@@ -447,7 +447,7 @@ p.MsoFooter, li.MsoFooter, div.MsoFooter
 	font-family:"Calibri","sans-serif";
 	mso-ascii-font-family:Calibri;
 	mso-ascii-theme-font:minor-latin;
-	mso-fareast-font-family:ËÎÌå;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-fareast-theme-font:minor-fareast;
 	mso-hansi-font-family:Calibri;
 	mso-hansi-theme-font:minor-latin;
@@ -470,24 +470,24 @@ a:visited, span.MsoHyperlinkFollowed
 p.MsoPlainText, li.MsoPlainText, div.MsoPlainText
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"´¿ÎÄ±¾ Char";
+	mso-style-link:"çº¯æ–‡æœ¬ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
 	text-justify:inter-ideograph;
 	mso-pagination:none;
 	font-size:10.5pt;
-	font-family:ËÎÌå;
+	font-family:å®‹ä½“;
 	mso-hansi-font-family:"Courier New";
 	mso-bidi-font-family:"Courier New";
 	mso-font-kerning:1.0pt;}
 span.Char
-	{mso-style-name:"Ò³Ã¼ Char";
+	{mso-style-name:"é¡µçœ‰ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:Ò³Ã¼;
+	mso-style-link:é¡µçœ‰;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
 	font-family:"Calibri","sans-serif";
@@ -498,12 +498,12 @@ span.Char
 	mso-bidi-font-family:Calibri;
 	mso-font-kerning:1.0pt;}
 span.Char0
-	{mso-style-name:"Ò³½Å Char";
+	{mso-style-name:"é¡µè„š Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:Ò³½Å;
+	mso-style-link:é¡µè„š;
 	mso-ansi-font-size:9.0pt;
 	mso-bidi-font-size:9.0pt;
 	font-family:"Calibri","sans-serif";
@@ -514,16 +514,16 @@ span.Char0
 	mso-bidi-font-family:Calibri;
 	mso-font-kerning:1.0pt;}
 span.Char1
-	{mso-style-name:"´¿ÎÄ±¾ Char";
+	{mso-style-name:"çº¯æ–‡æœ¬ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:´¿ÎÄ±¾;
+	mso-style-link:çº¯æ–‡æœ¬;
 	mso-bidi-font-size:10.5pt;
-	font-family:ËÎÌå;
-	mso-ascii-font-family:ËÎÌå;
-	mso-fareast-font-family:ËÎÌå;
+	font-family:å®‹ä½“;
+	mso-ascii-font-family:å®‹ä½“;
+	mso-fareast-font-family:å®‹ä½“;
 	mso-hansi-font-family:"Courier New";
 	mso-bidi-font-family:"Courier New";}
 span.SpellE
@@ -563,7 +563,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -592,87 +592,87 @@ punctuation'>
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoPlainText><b style='mso-bidi-font-weight:normal'><span lang=EN-US
-style='font-size:24.0pt;font-family:ºÚÌå;mso-bidi-font-family:ËÎÌå'><a
+style='font-size:24.0pt;font-family:é»‘ä½“;mso-bidi-font-family:å®‹ä½“'><a
 href="https://kvzmstudios.github.io/"><span style='color:windowtext;text-decoration:
 none;text-underline:none'>KVZM Studios</span></a><o:p></o:p></span></b></p>
 
 <p class=MsoPlainText><span class=SpellE><b style='mso-bidi-font-weight:normal'><span
 lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'>JigsawUI</span></b></span><b style='mso-bidi-font-weight:
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>JigsawUI</span></b></span><b style='mso-bidi-font-weight:
 normal'><span lang=EN-US style='font-size:14.0pt;mso-bidi-font-size:10.5pt;
-mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>&gt;<span class=SpellE>JigsawAPPS</span><o:p></o:p></span></b></p>
+mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>&gt;<span class=SpellE>JigsawAPPS</span><o:p></o:p></span></b></p>
 
-<p class=MsoPlainText><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>À´Ê¹ÓÃÕâĞ©<span class=SpellE><span lang=EN-US>JigsawUI</span></span>µÄÓ¦ÓÃ³ÌĞò°É£¡<span
+<p class=MsoPlainText><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>æ¥ä½¿ç”¨è¿™äº›<span class=SpellE><span lang=zh-CN>JigsawUI</span></span>çš„åº”ç”¨ç¨‹åºå§ï¼<span
 lang=EN-US><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>-------------------------------------<o:p></o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>-------------------------------------<o:p></o:p></span></p>
 
 <p class=MsoPlainText style='text-indent:21.0pt'><b style='mso-bidi-font-weight:
-normal'><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>¡¤<span
+normal'><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>Â·<span
 class=SpellE><span lang=EN-US>PlanetMusicPlayer</span></span><span lang=EN-US><o:p></o:p></span></span></b></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><span style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp; </span></span><span
-style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>¿ª·¢Õß£º<span lang=EN-US><a
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><span style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp; </span></span><span
+style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>å¼€å‘è€…ï¼š<span lang=EN-US><a
 href="https://pigeon-ming.github.io/">Pigeon_Ming</a><o:p></o:p></span></span></p>
 
 <p class=MsoPlainText style='text-indent:21.0pt'><span style='mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'>½éÉÜ£º¼ò½àÒ×ÓÃµÄÒôÀÖ²¥·ÅÆ÷<span lang=EN-US><o:p></o:p></span></span></p>
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>ä»‹ç»ï¼šç®€æ´æ˜“ç”¨çš„éŸ³ä¹æ’­æ”¾å™¨<span lang=EN-US><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><span style='mso-spacerun:yes'>&nbsp;</span><span
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><span style='mso-spacerun:yes'>&nbsp;</span><span
 style='mso-tab-count:1'>&nbsp;&nbsp; </span><u><a
 href="https://pigeon-ming.github.io/PlanetMusicPlayer.html"><span lang=EN-US><span
-lang=EN-US>µã»÷²é¿´&gt;</span></span></a><o:p></o:p></u></span></p>
+lang=EN-US>ç‚¹å‡»æŸ¥çœ‹&gt;</span></span></a><o:p></o:p></u></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>-------------------------------------<o:p></o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>-------------------------------------<o:p></o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><span style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp; </span></span><b
-style='mso-bidi-font-weight:normal'><u><span style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>¡¤»¶Ó­Í¶¸å£¡</span></u></b><b style='mso-bidi-font-weight:
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><span style='mso-tab-count:1'>&nbsp;&nbsp;&nbsp; </span></span><b
+style='mso-bidi-font-weight:normal'><u><span style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Â·æ¬¢è¿æŠ•ç¨¿ï¼</span></u></b><b style='mso-bidi-font-weight:
 normal'><u><span lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:10.5pt;
-mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>(</span></u></b><b
+mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>(</span></u></b><b
 style='mso-bidi-font-weight:normal'><u><span style='font-size:9.0pt;mso-bidi-font-size:
-10.5pt;mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>ÇëÓÊÏäÁªÏµ<span lang=EN-US>)</span></span></u></b><b
+10.5pt;mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>è¯·é‚®ç®±è”ç³»<span lang=EN-US>)</span></span></u></b><b
 style='mso-bidi-font-weight:normal'><u><span lang=EN-US style='mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'><o:p></o:p></span></u></b></p>
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'><o:p></o:p></span></u></b></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>-------------------------------------<o:p></o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>-------------------------------------<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span style='font-size:12.0pt;mso-bidi-font-size:10.5pt;
-mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>¿´¿´¹Ù·½ÍÆ³öµÄÓ¦ÓÃ£¿</span><span
+mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>çœ‹çœ‹å®˜æ–¹æ¨å‡ºçš„åº”ç”¨ï¼Ÿ</span><span
 lang=EN-US style='font-size:9.0pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:
-ËÎÌå;mso-bidi-font-family:ËÎÌå'>*</span><span style='font-size:9.0pt;mso-bidi-font-size:
-10.5pt;mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>¾ùÎ´ÊÊÅäĞÂ°æ<span
+å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>*</span><span style='font-size:9.0pt;mso-bidi-font-size:
+10.5pt;mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>å‡æœªé€‚é…æ–°ç‰ˆ<span
 class=SpellE><span lang=EN-US>JigsawUI</span></span></span><span lang=EN-US
-style='font-size:7.5pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p></o:p></span></p>
+style='font-size:7.5pt;mso-bidi-font-size:10.5pt;mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p></o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><a href="https://kvzmstudios.lanzoui.com/b01tzkrad"><span
-lang=EN-US><span lang=EN-US>µã»÷<span lang=EN-US>ÕâÀï</span></span></span></a></span><span
-style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:ËÎÌå'>£¨ÃÜÂë£º<span lang=EN-US>e2ti</span>£©<span
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><a href="https://kvzmstudios.lanzoui.com/b01tzkrad"><span
+lang=EN-US><span lang=EN-US>ç‚¹å‡»<span lang=EN-US>è¿™é‡Œ</span></span></span></a></span><span
+style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:å®‹ä½“'>ï¼ˆå¯†ç ï¼š<span lang=EN-US>e2ti</span>ï¼‰<span
 lang=EN-US><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'><o:p>&nbsp;</o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'><o:p>&nbsp;</o:p></span></p>
 
-<p class=MsoPlainText><span style='mso-hansi-font-family:ËÎÌå;mso-bidi-font-family:
-ËÎÌå'>ÁªÏµ·½Ê½£º<span lang=EN-US><a href="mailto:kvzmstudios@outlook.com">E-mail</a><o:p></o:p></span></span></p>
+<p class=MsoPlainText><span style='mso-hansi-font-family:å®‹ä½“;mso-bidi-font-family:
+å®‹ä½“'>è”ç³»æ–¹å¼ï¼š<span lang=EN-US><a href="mailto:kvzmstudios@outlook.com">E-mail</a><o:p></o:p></span></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>(C)KVZM Studios 2021 <o:p></o:p></span></p>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>(C)KVZM Studios 2021 <o:p></o:p></span></p>
 
-<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:ËÎÌå;
-mso-bidi-font-family:ËÎÌå'>Created by <a href="https://pigeon-ming.github.io/">Pigeon_Ming</a>
+<p class=MsoPlainText><span lang=EN-US style='mso-hansi-font-family:å®‹ä½“;
+mso-bidi-font-family:å®‹ä½“'>Created by <a href="https://pigeon-ming.github.io/">Pigeon_Ming</a>
 on Word<o:p></o:p></span></p>
 
 </div>
