--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@ lang=EN-US>了解什么是Jigsaw UI &gt;</span></span></a> <o:p></o:p></span></p
 
 <p class=MsoNormal><span lang=EN-US style='font-family:宋体;mso-ascii-theme-font:
 major-fareast;mso-fareast-theme-font:major-fareast;mso-hansi-theme-font:major-fareast'><a
-href="https://kvzmstudios.github.io/jigsawui.html"><span lang=EN-US><span
+href="https://kvzmstudios.github.io/JigsawUI.html"><span lang=EN-US><span
 lang=EN-US>在Windows</span></span><span lang=EN-US><span lang=EN-US>平台上体验Jigsaw
 UI &gt;</span></span></a><o:p></o:p></span></p>
 
