--- a/JigsawUI.html
+++ b/JigsawUI.html
@@ -1,9 +1,11 @@
 <html>
 <head>
 </head>
-<a href="https://kvzmstudios.lanzoui.com/iDrtGsc5xqj">
+<a href="https://kvzmstudios.lanzoui.com/i2KwJt1g38h">
 <span lang="en-US">
-<span lang="zh-CN">点击下载;</span>
+<span lang="zh-CN">点击下载</span></a></p></p>
+<span lang="zh-CN">_________________________________</span></p>
+<span lang="zh-CN">2021/08/23 Build 1117</span></p>·更改了配色</p>·修复了检查更新出错的问题</p>·增加了拖动右下角更改窗口大小的功能
 </span>
 </a>
 <p class="MsoNormal"><span lang="EN-US"><o:p>&nbsp;</o:p></span></p>
