--- a/JigsawNotePad.html
+++ b/JigsawNotePad.html
@@ -306,7 +306,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:ËÎÌå;
+	{font-family:å®‹ä½“;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -314,7 +314,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -322,7 +322,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:ºÚÌå;
+	{font-family:é»‘ä½“;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -337,14 +337,14 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:-469750017 -1073732485 9 0 511 0;}
 @font-face
-	{font-family:"\@ºÚÌå";
+	{font-family:"\@é»‘ä½“";
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:"\@ËÎÌå";
+	{font-family:"\@å®‹ä½“";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -362,7 +362,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:ËÎÌå;}
+	mso-fareast-font-family:å®‹ä½“;}
 a:link, span.MsoHyperlink
 	{mso-style-priority:99;
 	color:blue;
@@ -377,26 +377,26 @@ a:visited, span.MsoHyperlinkFollowed
 p.MsoPlainText, li.MsoPlainText, div.MsoPlainText
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"´¿ÎÄ±¾ Char";
+	mso-style-link:"çº¯æ–‡æœ¬ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
 	text-justify:inter-ideograph;
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
-	font-family:ËÎÌå;
-	mso-bidi-font-family:ËÎÌå;}
+	font-family:å®‹ä½“;
+	mso-bidi-font-family:å®‹ä½“;}
 span.Char
-	{mso-style-name:"´¿ÎÄ±¾ Char";
+	{mso-style-name:"çº¯æ–‡æœ¬ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:´¿ÎÄ±¾;
-	font-family:ËÎÌå;
-	mso-ascii-font-family:ËÎÌå;
-	mso-fareast-font-family:ËÎÌå;
-	mso-hansi-font-family:ËÎÌå;}
+	mso-style-link:çº¯æ–‡æœ¬;
+	font-family:å®‹ä½“;
+	mso-ascii-font-family:å®‹ä½“;
+	mso-fareast-font-family:å®‹ä½“;
+	mso-hansi-font-family:å®‹ä½“;}
 p.msochpdefault, li.msochpdefault, div.msochpdefault
 	{mso-style-name:msochpdefault;
 	mso-style-unhide:no;
@@ -407,7 +407,7 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:ËÎÌå;}
+	mso-fareast-font-family:å®‹ä½“;}
 span.SpellE
 	{mso-style-name:"";
 	mso-spl-e:yes;}
@@ -437,7 +437,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:ÆÕÍ¨±í¸ñ;
+	{mso-style-name:æ™®é€šè¡¨æ ¼;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -464,41 +464,39 @@ punctuation'>
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoPlainText><b><span lang=EN-US style='font-size:24.0pt;font-family:
-ºÚÌå'><a href="https://kvzmstudios.github.io/"><span style='color:windowtext;
+é»‘ä½“'><a href="https://kvzmstudios.github.io/"><span style='color:windowtext;
 text-decoration:none;text-underline:none'>KVZM Studios</span></a></span></b></p>
 
 <p class=MsoPlainText><span class=SpellE><b><span lang=EN-US style='font-size:
 14.0pt'>JigsawUI</span></b></span><b><span lang=zh-CN style='font-size:14.0pt'>&gt;<span
-class=SpellE>JigsawUI</span></span></b><b><span style='font-size:14.0pt'>Èí¼ş£ºÎÄ±¾±à¼­Æ÷</span></b></p>
+class=SpellE>JigsawUI</span></span></b><b><span style='font-size:14.0pt'>è½¯ä»¶ï¼šæ–‡æœ¬ç¼–è¾‘å™¨</span></b></p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>ÎÄ±¾±à¼­Æ÷<span lang=EN-US>1.0</span></p>
+<p class=MsoPlainText>æ–‡æœ¬ç¼–è¾‘å™¨<span lang=zh-CN>1.0</span></p>
 
 <p class=MsoNormal><u><span lang=EN-US><a
 href="https://kvzmstudios.lanzoui.com/iHtE0t8vemj">Jak<span lang=EN-US
-style='font-family:ËÎÌå'><span lang=EN-US>°ü£¨<span lang=EN-US>µã»÷<span lang=EN-US>ÏÂÔØ</span></span></span></span><span
-lang=EN-US style='font-family:ËÎÌå'><span lang=EN-US>£©</span></span></a><o:p></o:p></span></u></p>
+style='font-family:å®‹ä½“'><span lang=EN-US>åŒ…ï¼ˆ<span lang=EN-US>ç‚¹å‡»<span lang=EN-US>ä¸‹è½½</span></span></span></span><span
+lang=EN-US style='font-family:å®‹ä½“'><span lang=EN-US>ï¼‰</span></span></a><o:p></o:p></span></u></p>
 
 <p class=MsoPlainText><span lang=EN-US><a
 href="https://kvzmstudios.lanzoui.com/iTSo7t8uhgf">exe<span lang=EN-US><span
-lang=EN-US>ÎÄ¼ş£¨µã»÷ÏÂ<span lang=EN-US>ÔØ<span lang=EN-US>£©</span></span></span></span></a></span></p>
+lang=EN-US>æ–‡ä»¶ï¼ˆç‚¹å‡»ä¸‹<span lang=EN-US>è½½<span lang=EN-US>ï¼‰</span></span></span></span></a></span></p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>¡¤¼ò½àµÄÎÄ±¾±à¼­Æ÷</p>
+<p class=MsoPlainText>Â·ç®€æ´çš„æ–‡æœ¬ç¼–è¾‘å™¨</p>
 
-<p class=MsoPlainText>¡¤ÓµÓĞÉîÉ«Ä£Ê½£¨ĞèÍ¨¹ı<span class=SpellE><span lang=EN-US>JigsawUI</span></span>·şÎñ³ÌĞò¿ªÆô£©</p>
+<p class=MsoPlainText>Â·æ‹¥æœ‰æ·±è‰²æ¨¡å¼ï¼ˆéœ€é€šè¿‡<span class=SpellE><span lang=EN-US>JigsawUI</span></span>æœåŠ¡ç¨‹åºå¼€å¯ï¼‰</p>
 
 <p class=MsoNormal><span lang=EN-US>____________________________________________________</span></p>
 
-<p class=MsoPlainText>¸üĞÂÈÕÖ¾£º</p>
+<p class=MsoPlainText>æ›´æ–°æ—¥å¿—ï¼š</p>
 
-<p class=MsoPlainText><span lang=EN-US>1.0</span>°æ±¾<span lang=EN-US> 2021/8/27</span></p>
+<p class=MsoPlainText><span lang=EN-US>1.0</span>ç‰ˆæœ¬<span lang=EN-US> 2021/8/27</span></p>
 
-<p class=MsoPlainText>¡¤Äã¿ÉÄÜÏ²»¶µÄÎÄ±¾±à¼­Æ÷À´ÁË£¡¸Ï¿ìÏÂÔØÌåÑé°É£¡</p>
-
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+<p class=MsoPlainText>Â·ä½ å¯èƒ½å–œæ¬¢çš„æ–‡æœ¬ç¼–è¾‘å™¨æ¥äº†ï¼èµ¶å¿«ä¸‹è½½ä½“éªŒå§ï¼</p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
@@ -524,7 +522,9 @@ lang=EN-US>ÎÄ¼ş£¨µã»÷ÏÂ<span lang=EN-US>ÔØ<span lang=EN-US>£©</span></span></spa
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>ÁªÏµ·½Ê½£º<span lang=EN-US><a
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText>è”ç³»æ–¹å¼ï¼š<span lang=EN-US><a
 href="mailto:kvzmstudios@outlook.com">E-mail</a></span></p>
 
 <p class=MsoPlainText><span lang=EN-US>(C)KVZM Studios 2021 </span></p>
