--- a/JigsawNotePad.html
+++ b/JigsawNotePad.html
@@ -14,6 +14,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <link rel=colorSchemeMapping href="JigsawNotePad.files/colorschememapping.xml">
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
+  <w:Zoom>150</w:Zoom>
   <w:SpellingState>Clean</w:SpellingState>
   <w:GrammarState>Clean</w:GrammarState>
   <w:TrackMoves>false</w:TrackMoves>
@@ -306,7 +307,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <!--
  /* Font Definitions */
  @font-face
-	{font-family:å®‹ä½“;
+	{font-family:ËÎÌå;
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-alt:SimSun;
 	mso-font-charset:134;
@@ -314,7 +315,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:515 680460288 22 0 262145 0;}
 @font-face
-	{font-family:é»‘ä½“;
+	{font-family:ºÚÌå;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -322,7 +323,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:é»‘ä½“;
+	{font-family:ºÚÌå;
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-alt:SimHei;
 	mso-font-charset:134;
@@ -337,14 +338,14 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-font-pitch:variable;
 	mso-font-signature:-469750017 -1073732485 9 0 511 0;}
 @font-face
-	{font-family:"\@é»‘ä½“";
+	{font-family:"\@ºÚÌå";
 	panose-1:2 1 6 9 6 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:modern;
 	mso-font-pitch:fixed;
 	mso-font-signature:-2147482945 953122042 22 0 262145 0;}
 @font-face
-	{font-family:"\@å®‹ä½“";
+	{font-family:"\@ËÎÌå";
 	panose-1:2 1 6 0 3 1 1 1 1 1;
 	mso-font-charset:134;
 	mso-generic-font-family:auto;
@@ -362,7 +363,34 @@ xmlns="http://www.w3.org/TR/REC-html40">
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:å®‹ä½“;}
+	mso-fareast-font-family:ËÎÌå;}
+p.MsoHeader, li.MsoHeader, div.MsoHeader
+	{mso-style-priority:99;
+	mso-style-link:"Ò³Ã¼ Char";
+	margin:0cm;
+	margin-bottom:.0001pt;
+	text-align:center;
+	mso-pagination:widow-orphan;
+	tab-stops:center 207.65pt right 415.3pt;
+	layout-grid-mode:char;
+	border:none;
+	mso-border-bottom-alt:solid windowtext .75pt;
+	padding:0cm;
+	mso-padding-alt:0cm 0cm 1.0pt 0cm;
+	font-size:9.0pt;
+	font-family:"Calibri","sans-serif";
+	mso-fareast-font-family:ËÎÌå;}
+p.MsoFooter, li.MsoFooter, div.MsoFooter
+	{mso-style-priority:99;
+	mso-style-link:"Ò³½Å Char";
+	margin:0cm;
+	margin-bottom:.0001pt;
+	mso-pagination:widow-orphan;
+	tab-stops:center 207.65pt right 415.3pt;
+	layout-grid-mode:char;
+	font-size:9.0pt;
+	font-family:"Calibri","sans-serif";
+	mso-fareast-font-family:ËÎÌå;}
 a:link, span.MsoHyperlink
 	{mso-style-priority:99;
 	color:blue;
@@ -377,26 +405,26 @@ a:visited, span.MsoHyperlinkFollowed
 p.MsoPlainText, li.MsoPlainText, div.MsoPlainText
 	{mso-style-noshow:yes;
 	mso-style-priority:99;
-	mso-style-link:"çº¯æ–‡æœ¬ Char";
+	mso-style-link:"´¿ÎÄ±¾ Char";
 	margin:0cm;
 	margin-bottom:.0001pt;
 	text-align:justify;
 	text-justify:inter-ideograph;
 	mso-pagination:widow-orphan;
 	font-size:10.5pt;
-	font-family:å®‹ä½“;
-	mso-bidi-font-family:å®‹ä½“;}
+	font-family:ËÎÌå;
+	mso-bidi-font-family:ËÎÌå;}
 span.Char
-	{mso-style-name:"çº¯æ–‡æœ¬ Char";
+	{mso-style-name:"´¿ÎÄ±¾ Char";
 	mso-style-noshow:yes;
 	mso-style-priority:99;
 	mso-style-unhide:no;
 	mso-style-locked:yes;
-	mso-style-link:çº¯æ–‡æœ¬;
-	font-family:å®‹ä½“;
-	mso-ascii-font-family:å®‹ä½“;
-	mso-fareast-font-family:å®‹ä½“;
-	mso-hansi-font-family:å®‹ä½“;}
+	mso-style-link:´¿ÎÄ±¾;
+	font-family:ËÎÌå;
+	mso-ascii-font-family:ËÎÌå;
+	mso-fareast-font-family:ËÎÌå;
+	mso-hansi-font-family:ËÎÌå;}
 p.msochpdefault, li.msochpdefault, div.msochpdefault
 	{mso-style-name:msochpdefault;
 	mso-style-unhide:no;
@@ -407,10 +435,33 @@ p.msochpdefault, li.msochpdefault, div.msochpdefault
 	mso-pagination:widow-orphan;
 	font-size:12.0pt;
 	font-family:"Calibri","sans-serif";
-	mso-fareast-font-family:å®‹ä½“;}
+	mso-fareast-font-family:ËÎÌå;}
+span.Char0
+	{mso-style-name:"Ò³Ã¼ Char";
+	mso-style-priority:99;
+	mso-style-unhide:no;
+	mso-style-locked:yes;
+	mso-style-link:Ò³Ã¼;
+	mso-ansi-font-size:9.0pt;
+	mso-bidi-font-size:9.0pt;
+	font-family:ËÎÌå;
+	mso-fareast-font-family:ËÎÌå;}
+span.Char1
+	{mso-style-name:"Ò³½Å Char";
+	mso-style-priority:99;
+	mso-style-unhide:no;
+	mso-style-locked:yes;
+	mso-style-link:Ò³½Å;
+	mso-ansi-font-size:9.0pt;
+	mso-bidi-font-size:9.0pt;
+	font-family:ËÎÌå;
+	mso-fareast-font-family:ËÎÌå;}
 span.SpellE
 	{mso-style-name:"";
 	mso-spl-e:yes;}
+span.GramE
+	{mso-style-name:"";
+	mso-gram-e:yes;}
 .MsoChpDefault
 	{mso-style-type:export-only;
 	mso-default-props:yes;
@@ -422,6 +473,12 @@ span.SpellE
 	mso-hansi-font-family:Calibri;
 	mso-bidi-font-family:Calibri;
 	mso-font-kerning:0pt;}
+ /* Page Definitions */
+ @page
+	{mso-footnote-separator:url("JigsawNotePad.files/header.html") fs;
+	mso-footnote-continuation-separator:url("JigsawNotePad.files/header.html") fcs;
+	mso-endnote-separator:url("JigsawNotePad.files/header.html") es;
+	mso-endnote-continuation-separator:url("JigsawNotePad.files/header.html") ecs;}
 @page WordSection1
 	{size:595.3pt 841.9pt;
 	margin:72.0pt 87.65pt 72.0pt 87.65pt;
@@ -437,7 +494,7 @@ div.WordSection1
 <style>
  /* Style Definitions */
  table.MsoNormalTable
-	{mso-style-name:æ™®é€šè¡¨æ ¼;
+	{mso-style-name:ÆÕÍ¨±í¸ñ;
 	mso-tstyle-rowband-size:0;
 	mso-tstyle-colband-size:0;
 	mso-style-noshow:yes;
@@ -451,7 +508,7 @@ div.WordSection1
 	font-family:"Calibri","sans-serif";}
 </style>
 <![endif]--><!--[if gte mso 9]><xml>
- <o:shapedefaults v:ext="edit" spidmax="1026"/>
+ <o:shapedefaults v:ext="edit" spidmax="2049"/>
 </xml><![endif]--><!--[if gte mso 9]><xml>
  <o:shapelayout v:ext="edit">
   <o:idmap v:ext="edit" data="1"/>
@@ -464,47 +521,44 @@ punctuation'>
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoPlainText><b><span lang=EN-US style='font-size:24.0pt;font-family:
-é»‘ä½“'><a href="https://kvzmstudios.github.io/"><span style='color:windowtext;
+ºÚÌå'><a href="https://kvzmstudios.github.io/"><span style='color:windowtext;
 text-decoration:none;text-underline:none'>KVZM Studios</span></a></span></b></p>
 
 <p class=MsoPlainText><span class=SpellE><b><span lang=EN-US style='font-size:
 14.0pt'>JigsawUI</span></b></span><b><span lang=zh-CN style='font-size:14.0pt'>&gt;<span
-class=SpellE>JigsawUI</span></span></b><b><span style='font-size:14.0pt'>è½¯ä»¶ï¼šæ–‡æœ¬ç¼–è¾‘å™¨</span></b></p>
+class=SpellE>JigsawUI</span></span></b><b><span style='font-size:14.0pt'>Èí¼ş£ºÎÄ±¾±à¼­Æ÷</span></b></p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>æ–‡æœ¬ç¼–è¾‘å™¨<span lang=zh-CN>1.0</span></p>
+<p class=MsoPlainText>ÎÄ±¾±à¼­Æ÷<span lang=EN-US>1.1</span></p>
 
 <p class=MsoNormal><u><span lang=EN-US><a
-href="https://kvzmstudios.lanzoui.com/iHtE0t8vemj">Jak<span lang=EN-US
-style='font-family:å®‹ä½“'><span lang=EN-US>åŒ…ï¼ˆ<span lang=EN-US>ç‚¹å‡»<span lang=EN-US>ä¸‹è½½</span></span></span></span><span
-lang=EN-US style='font-family:å®‹ä½“'><span lang=EN-US>ï¼‰</span></span></a><o:p></o:p></span></u></p>
+href="https://kvzmstudios.lanzoui.com/i3OBStc0nhg">Jak<span lang=EN-US
+style='font-family:ËÎÌå'><span lang=EN-US>°ü£¨µã»÷ÏÂÔØ£©</span></span><o:p></o:p></a></span></u></p>
 
 <p class=MsoPlainText><span lang=EN-US><a
-href="https://kvzmstudios.lanzoui.com/iTSo7t8uhgf">exe<span lang=EN-US><span
-lang=EN-US>æ–‡ä»¶ï¼ˆç‚¹å‡»ä¸‹<span lang=EN-US>è½½<span lang=EN-US>ï¼‰</span></span></span></span></a></span></p>
+href="https://kvzmstudios.lanzoui.com/iYVO7tc0j7c">exe<span lang=EN-US><span
+lang=EN-US>ÎÄ¼ş£¨µã»÷<span lang=EN-US>ÏÂ<span lang=EN-US>ÔØ£©<o:p></o:p></span></span></span></span></a></span></p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>Â·ç®€æ´çš„æ–‡æœ¬ç¼–è¾‘å™¨</p>
+<p class=MsoPlainText>¡¤¼ò½àµÄÎÄ±¾±à¼­Æ÷</p>
 
-<p class=MsoPlainText>Â·æ‹¥æœ‰æ·±è‰²æ¨¡å¼ï¼ˆéœ€é€šè¿‡<span class=SpellE><span lang=EN-US>JigsawUI</span></span>æœåŠ¡ç¨‹åºå¼€å¯ï¼‰</p>
+<p class=MsoPlainText>¡¤ÓµÓĞÉîÉ«Ä£Ê½£¨ĞèÍ¨¹ı<span class=SpellE><span lang=EN-US>JigsawUI</span></span>·şÎñ³ÌĞò¿ªÆô£©</p>
 
 <p class=MsoNormal><span lang=EN-US>____________________________________________________</span></p>
 
-<p class=MsoPlainText>æ›´æ–°æ—¥å¿—ï¼š</p>
+<p class=MsoPlainText>¸üĞÂÈÕÖ¾£º</p>
 
-<p class=MsoPlainText><span lang=EN-US>1.0</span>ç‰ˆæœ¬<span lang=EN-US> 2021/8/27</span></p>
+<p class=MsoPlainText><span lang=EN-US>1.1</span>°æ±¾<span lang=EN-US> 2021/8/29</span></p>
 
-<p class=MsoPlainText>Â·ä½ å¯èƒ½å–œæ¬¢çš„æ–‡æœ¬ç¼–è¾‘å™¨æ¥äº†ï¼èµ¶å¿«ä¸‹è½½ä½“éªŒå§ï¼</p>
+<p class=MsoPlainText>¡¤ĞÂÔöÍÏ<span class=GramE>·ÅÎÄ¼ş</span>¹¦ÄÜ£¬´ò¿ªÎÄ¼ş£¬Ò»ÍÏ¼´´ï</p>
 
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+<p class=MsoPlainText>¡¤ĞŞ¸´¹ØÓÚ´°¿ÚÖĞÃû×Ö´íÎóµÄÎÊÌâ</p>
 
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+<p class=MsoPlainText><span lang=EN-US>1.0</span>°æ±¾<span lang=EN-US> 2021/8/27</span></p>
 
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
-
-<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+<p class=MsoPlainText>¡¤Äã¿ÉÄÜÏ²»¶µÄÎÄ±¾±à¼­Æ÷À´ÁË£¡¸Ï¿ìÏÂÔØÌåÑé°É£¡</p>
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
@@ -524,7 +578,15 @@ lang=EN-US>æ–‡ä»¶ï¼ˆç‚¹å‡»ä¸‹<span lang=EN-US>è½½<span lang=EN-US>ï¼‰</span></sp
 
 <p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoPlainText>è”ç³»æ–¹å¼ï¼š<span lang=EN-US><a
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoPlainText>ÁªÏµ·½Ê½£º<span lang=EN-US><a
 href="mailto:kvzmstudios@outlook.com">E-mail</a></span></p>
 
 <p class=MsoPlainText><span lang=EN-US>(C)KVZM Studios 2021 </span></p>
